<resources>
    <string name="app_name">My Wallpapers</string>
    <string name="action_settings">Settings</string>
    <string name="wallpaper_set">Wallpaper set successfully!</string>
    <string name="sent_content_error">A problem happened while receiving an image from another app.</string>
    <string name="sent_content_received">Added a new wallpaper from another app.</string>
    <string name="wallpaper_card_set_button">Use</string>
    <string name="wallpaper_delete_button_text">Delete</string>
    <string name="wallpaper_delete_confirm_title">Delete wallpaper</string>
    <string name="wallpaper_delete_confirm_message">Are you sure you want to delete this wallpaper?</string>
    <string name="wallpaper_delete_confirm_delete_button">Yes, delete it</string>
    <string name="wallpaper_delete_confirm_cancel_button">No</string>
    <string name="menu_item_add_from_device">Add from device</string>
    <string name="menu_item_add_from_flickr">Add from Flickr</string>
    <string name="menu_item_search_flickr">Search Flickr</string>
    <string name="pick_image_message">Add a wallpaper from your device</string>
    <string name="flickr_search_label">Search Flickr</string>
    <string name="flickr_search_hint">Search Flickr for a wallpaper</string>
    <string name="flickr_search_results_title">Search Flickr for \"%1$s\"</string>
    <string name="flickr_json_exception">Could not parse Flickr result.</string>
    <string name="flickr_search_error">Got an error while searching Flickr</string>
    <string name="flickr_unsupported_encoding_error">Unable to encode the Flickr URL</string>
    <string name="flickr_get_small_image_error">Unable to download small image from Flickr</string>
    <string name="flickr_get_large_image_error">Unable to download large image from Flickr</string>
    <string name="flickr_image_downloaded">Added new wallpaper from Flickr</string>
    <string name="flickr_processing_failed">Processing the image from Flickr failed</string>
    <string name="flickr_download_started">Downloading wallpaper from Flickr</string>
    <string name="time_as_wallpaper_never">Never</string>
    <string name="time_as_wallpaper_days_singular">1 day</string>
    <string name="time_as_wallpaper_days">%1$d days</string>
    <string name="no_wallpapers_message">No wallpapers.</string>
    <string name="no_wallpapers_explainer">Search from Flickr, add from local sources or share photos to the app.</string>
    <string name="no_flickr_results_message">No results on Flickr.</string>
    <string name="no_flickr_results_explainer">Try some different keywords, add from local sources or share photos to the app.</string>
    <string name="flickr_search_suggestion_message">Search Flickr for wallpapers.</string>
    <string name="flickr_search_suggestion_explainer">Enter a search term to search for new wallpapers on Flickr.</string>
    <string name="wallpaper_change_description_button_text">Change description</string>
    <string name="wallpaper_change_description_dialog_title">Change description</string>
    <string name="wallpaper_change_description_dialog_set_button_text">Set</string>
    <string name="wallpaper_change_description_dialog_cancel_button_text">Cancel</string>
    <string name="menu_item_search_wallpapers">Search wallpapers</string>
    <string name="wallpaper_search_label">Search My Wallpapers.</string>
    <string name="wallpaper_search_hint">Search My Wallpapers.</string>
</resources>
