<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/menu_item_search_wallpapers"
        android:icon="@drawable/ic_magnify_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/action_add_flickr"
        android:title="@string/menu_item_add_from_flickr"
        android:icon="@drawable/ic_flickr"
        app:showAsAction="always"/>

    <item android:id="@+id/action_add_local"
        android:title="@string/menu_item_add_from_device"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"/>

</menu>
