<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FlickrSearchResultActivity"
    android:background="@color/flickr_results_background">

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/no_flickr_results_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatTextView
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/no_flickr_results_message"
            android:textSize="@dimen/flickr_preview_no_flickr_results_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:width="@dimen/flickr_preview_no_flickr_results_explainer_width"
            android:textSize="@dimen/flickr_preview_no_flickr_results_explainer_text_size"
            android:text="@string/no_flickr_results_explainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/flickr_search_suggestion_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatTextView
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/flickr_search_suggestion_message"
            android:textSize="@dimen/flickr_search_suggestion_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:width="@dimen/flickr_search_suggestion_explainer_width"
            android:textSize="@dimen/flickr_search_suggestion_explainer_text_size"
            android:text="@string/flickr_search_suggestion_explainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/flickr_preview_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
